--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ativos_pge",
   "private": true,
   "dependencies": {
+    "@ttskch/select2-bootstrap4-theme": "^1.5.2",
     "bootstrap": "^5.1.3",
     "bootstrap-growl-ifightcrime": "^1.1.0",
     "bootstrap-icons": "^1.8.1",
