--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ Ignore uploaded files in development
 !/storage/.keep
 
 #/node_modules
-#/yarn-error.log
+/yarn-error.log
 
 /public/assets
 .byebug_history
